--- a/Site/index.html
+++ b/Site/index.html
@@ -3,28 +3,53 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My News Site</title>
+    <title>Ponder News</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="landing.css">
+    <link rel="stylesheet" href="base_styles.css">
 </head>
 <body>
-
-    <header class="bg-dark text-white py-3">
-        <div class="container d-flex justify-content-between align-items-center">
-            <h1 class="h3">My News</h1>
-            <nav>
-                <ul class="nav">
-                    <li class="nav-item"><a class="nav-link text-white" href="#">Home</a></li>
-                    <li class="nav-item"><a class="nav-link text-white" href="#">other1</a></li>
-                    <li class="nav-item"><a class="nav-link text-white" href="#">other2</a></li>
-                    <li class="nav-item"><a class="nav-link text-white" href="#">other3</a></li>
-                    <li class="nav-item"><a class="nav-link text-white" href="#">other4</a></li>
-                </ul>
-            </nav>
+    <div id="navbar-container"></div>
+    <div class="container my-4">
+        <div id="carouselExampleCaptions" class="carousel slide">
+        <div class="carousel-indicators">
+            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
+            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
         </div>
-    </header>
-
-
+        <div class="carousel-inner">
+            <div class="carousel-item active">
+            <img src="/Resources/Halloween/halloween-harvest-photos-11.webp" class="d-block w-100" alt="...">
+            <div class="carousel-caption d-none d-md-block">
+                <h5>Halloween in Downtown Flagstaff</h5>
+                <p>Some representative placeholder content about this article.</p>
+            </div>
+            </div>
+            <div class="carousel-item">
+            <img src="..." class="d-block w-100" alt="...">
+            <div class="carousel-caption d-none d-md-block">
+                <h5>Second slide</h5>
+                <p>Some representative placeholder content about this article.</p>
+            </div>
+            </div>
+            <div class="carousel-item">
+            <img src="..." class="d-block w-100" alt="...">
+            <div class="carousel-caption d-none d-md-block">
+                <h5>Third slide</h5>
+                <p>Some representative placeholder content about this article.</p>
+            </div>
+            </div>
+        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+        </button>
+        </div>
+    </div>
     <main class="container my-5">
         <div class="row">
 
@@ -59,11 +84,12 @@
 
     <footer class="bg-dark text-white py-4 mt-5">
         <div class="container text-center">
-            CONNOR MANGUS NEWS
+            Ponder News 11/01/2025
         </div>
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="index.js"></script>
+    <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
+    <script src="landing.js"></script>
 </body>
 </html>
