--- a/Site/landing.html
+++ b/Site/landing.html
@@ -68,10 +68,10 @@
             <div class="col-lg-4">
                 <h4>Latest News</h4>
                 <div class="list-group">
-                    <a href="#" class="list-group-item list-group-item-action">News Article 1</a>
-                    <a href="#" class="list-group-item list-group-item-action">News Article 2</a>
-                    <a href="#" class="list-group-item list-group-item-action">News Article 3</a>
-                    <a href="#" class="list-group-item list-group-item-action">News Article 4</a>
+                    <a href="articleTemplate.html" class="list-group-item list-group-item-action">News Article 1</a>
+                    <a href="articleTemplate.html" class="list-group-item list-group-item-action">News Article 2</a>
+                    <a href="articleTemplate.html" class="list-group-item list-group-item-action">News Article 3</a>
+                    <a href="articleTemplate.html" class="list-group-item list-group-item-action">News Article 4</a>
                 </div>
             </div>
         </div>
