--- a/Site/heading.html
+++ b/Site/heading.html
@@ -1,6 +1,6 @@
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
     <div class="container-fluid">
-        <a class="navbar-brand" href="heading.html"><img src="/Resources/ponder-high-resolution-logo-transparent.png" alt="Ponder News logo" id="transparent-logo"></a>
+        <a class="navbar-brand" href="landing.html"><img src="/Resources/ponder-high-resolution-logo-transparent.png" alt="Ponder News logo" id="transparent-logo"></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
         </button>
