--- a/Site/landing.html
+++ b/Site/landing.html
@@ -59,7 +59,7 @@
                     <div class="card-body">
                         <h2 class="card-title">Featured News Headline</h2>
                         <p class="card-text">Summary of news article</p>
-                        <a href="#" class="btn btn-primary">Read More</a>
+                        <a href="landing.html" class="btn btn-primary">Read More</a>
                     </div>
                 </div>
             </div>
