--- a/Site/heading.html
+++ b/Site/heading.html
@@ -1,6 +1,6 @@
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
     <div class="container-fluid">
-        <a class="navbar-brand" href="#"><img src="/Resources/ponder-high-resolution-logo-transparent.png" alt="Ponder News logo" id="transparent-logo"></a>
+        <a class="navbar-brand" href="landing.html"><img src="/Resources/ponder-high-resolution-logo-transparent.png" alt="Ponder News logo" id="transparent-logo"></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
         </button>
@@ -21,9 +21,9 @@
             <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Help</a>
                 <ul class="dropdown-menu">
-                    <li><a class="dropdown-item" href="#">Contact</a></li>
-                    <li><a class="dropdown-item" href="#">Feedback</a></li>
-                    <li><a class="dropdown-item" href="#">Report an Error</a></li>
+                    <li><a class="dropdown-item" id="contactBtn">Contact</a></li>
+                    <li><a class="dropdown-item" id="feedbackBtn">Feedback</a></li>
+                    <li><a class="dropdown-item" id="reportBtn">Report an Error</a></li>
                 </ul>
             </li>
         </ul>
