--- a/Site/landing.html
+++ b/Site/landing.html
@@ -6,7 +6,9 @@
     <title>Ponder News</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="landing.css">
-    <link rel="stylesheet" href="base_styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Momo+Trust+Display&display=swap" rel="stylesheet">
 </head>
 <body>
     <div id="navbar-container"></div>
@@ -19,24 +21,24 @@
         </div>
         <div class="carousel-inner">
             <div class="carousel-item active">
-            <img src="/Resources/Halloween/halloween-harvest-photos-11.webp" class="d-block w-100" alt="...">
+            <img src="/Resources/Halloween/halloween-harvest-photos-11.webp" class="d-block w-100" alt="halloween costume contest in downtown flagstaff">
             <div class="carousel-caption d-none d-md-block">
                 <h5>Halloween in Downtown Flagstaff</h5>
-                <p>Some representative placeholder content about this article.</p>
+                <p>Spooky season is upon us! Read here for more about upcoming events.</p>
             </div>
             </div>
             <div class="carousel-item">
-            <img src="..." class="d-block w-100" alt="...">
+            <img src="/Resources/mountains.webp" class="d-block w-100" alt="flagstaff's mountain region">
             <div class="carousel-caption d-none d-md-block">
-                <h5>Second slide</h5>
-                <p>Some representative placeholder content about this article.</p>
+                <h5>Get outside this weekend</h5>
+                <p>Read more here to find out how you can explore Flagstaff.</p>
             </div>
             </div>
             <div class="carousel-item">
-            <img src="..." class="d-block w-100" alt="...">
+            <img src="/Resources/downtown_flagstaff.jpg" class="d-block w-100" alt="civics square in downtown flagstaff">
             <div class="carousel-caption d-none d-md-block">
-                <h5>Third slide</h5>
-                <p>Some representative placeholder content about this article.</p>
+                <h5>Explore downtown Flagstaff</h5>
+                <p>Events for the whole family! See what's going on in your community.</p>
             </div>
             </div>
         </div>
@@ -80,16 +82,20 @@
         <div class="row" id="more-articles">
 
         </div>
+        <div id="modal-container"></div>
     </main>
-
     <footer class="bg-dark text-white py-4 mt-5">
         <div class="container text-center">
             Ponder News 11/01/2025
         </div>
     </footer>
-
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js"></script>
+    <script>
+    emailjs.init('UqGLpPONiHaw4VIdG');
+    </script>
     <script src="landing.js"></script>
+    <script src="modals.js"></script>
 </body>
 </html>
