--- a/Site/heading.html
+++ b/Site/heading.html
@@ -7,16 +7,16 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
-                <a class="nav-link" href="#">Sports</a>
+                <a class="nav-link" href="sports.html">Sports</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">Business</a>
+                <a class="nav-link" href="business.html">Business</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">Health</a>
+                <a class="nav-link" href="health.html">Health</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">Culture</a>
+                <a class="nav-link" href="culture.html">Culture</a>
             </li>
             <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Help</a>
