--- a/Site/culture.html
+++ b/Site/culture.html
@@ -30,7 +30,7 @@
                 <p>summary</p>
             </div>
             <div class = "col">
-                <img src="/Resources/Culture/music.jpg" class="card-img-top" alt="Featured News">
+                <img src="/Resources/Culture/music.webp" class="card-img-top" alt="Featured News">
             </div>
         </div>
         
