--- a/Site/sports.html
+++ b/Site/sports.html
@@ -28,7 +28,7 @@
                 <p>summary</p>
             </div>
             <div class = "col">
-                <img src="/Resources/Sports/nau_football.jpg" class="card-img-top" alt="Featured News">
+                <img src="/Resources/Sports/football.webp" class="card-img-top" alt="Featured News">
             </div>
         </div>
         
