--- a/Site/business.html
+++ b/Site/business.html
@@ -31,7 +31,7 @@
                 <p>summary</p>
             </div>
             <div class = "col">
-                <img src="/Resources/Business/Business-Buildings.jpg" class="card-img-top" alt="Featured News">
+                <img src="/Resources/Business/business.webp" class="card-img-top" alt="Featured News">
             </div>
         </div>
         
