updated article template

--- a/Site/sports.html
+++ b/Site/sports.html
@@ -22,6 +22,7 @@
         </h1>
     </div>
     <main>
+        
         <div class = "row mb-5">
             <div class = "col">
                 <a style = "font-size: large; font-weight: bold" href = "articleTemplate.html" class="list-group-item list-group-item-action">Title line </a>
@@ -32,8 +33,14 @@
             </div>
         </div>
         
+        <div class = "row mb-2">
+            <h3>
+                Featured Articles:
+            </h3>
+        </div>
 
         <div class = "row mb-5">
+
             <div class = "col">
                 <a style = "font-size: large; font-weight: bold" href = "articleTemplate.html" class="list-group-item list-group-item-action">Title line </a>
                 <p>Date</p>
