--- a/Site/business.html
+++ b/Site/business.html
@@ -34,9 +34,14 @@
                 <img src="/Resources/Business/business.webp" class="card-img-top" alt="Featured News">
             </div>
         </div>
-        
 
         <div class = "row mb-5">
+            <h3>
+                Featured Articles:
+            </h3>
+        </div>
+
+        <div class = "row mb-2">
             <div class = "col">
                 <a style = "font-size: large; font-weight: bold" href = "articleTemplate.html" class="list-group-item list-group-item-action">Title line </a>
                 <p>Date</p>
