--- a/Site/culture.html
+++ b/Site/culture.html
@@ -24,7 +24,7 @@
     <main>
 
     
-        <div class = "row mb-5">
+        <div class = "row mb-2">
             <div class = "col">
                 <a style = "font-size: large; font-weight: bold" href = "articleTemplate.html" class="list-group-item list-group-item-action">Title line </a>
                 <p>summary</p>
@@ -34,6 +34,11 @@
             </div>
         </div>
         
+        <div class = "row mb-5">
+            <h3>
+                Featured Articles:
+            </h3>
+        </div>
 
         <div class = "row mb-5">
             <div class = "col">
