--- a/Site/health.html
+++ b/Site/health.html
@@ -34,6 +34,11 @@
             </div>
         </div>
         
+        <div class = "row mb-2">
+            <h3>
+                Featured Articles:
+            </h3>
+        </div>
 
         <div class = "row mb-5">
             <div class = "col">
