--- a/Site/landing.html
+++ b/Site/landing.html
@@ -9,6 +9,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Momo+Trust+Display&display=swap" rel="stylesheet">
+    <link rel="icon" href="/Resources/ponder-high-resolution-logo-transparent.png" type="image/x-icon">
+
 </head>
 <body>
     <div id="navbar-container"></div>
