--- a/Site/articleTemplate.html
+++ b/Site/articleTemplate.html
@@ -30,9 +30,9 @@
             <img src="https://via.placeholder.com/300x200" class=" w-100" alt="Article image">
         </div>
         <div id = "imageCaption">
-            <p>
+            <h6>
                 image caption:
-            </p>
+            </h6>
         </div>
         <div class = "row">
             <h2 id = "title">
@@ -42,7 +42,7 @@
 
         <div class = "row">
             <h5 id = "Author">
-                Author line:
+                Written by ChatGPT,
             </h5>
         </div>
 
@@ -61,6 +61,9 @@
             </p>
             <p id = "ArticleBody">
                 Lorem ipsum dolor sit amet consectetur adipiscing elit. Quisque faucibus ex sapien vitae pellentesque sem placerat. In id cursus mi pretium tellus duis convallis. Tempus leo eu aenean sed diam urna tempor. Pulvinar vivamus fringilla lacus nec metus bibendum egestas. Iaculis massa nisl malesuada lacinia integer nunc posuere. Ut hendrerit semper vel class aptent taciti sociosqu. Ad litora torquent per conubia nostra inceptos himenaeos.
+            </p>
+            <p id = "ArticleBody">
+                *Note: This article is written by A.I and is only intended to show a proof of concept for the news website. 
             </p>
         </div>
         <div id="modal-container"></div>
