--- a/Site/business.html
+++ b/Site/business.html
@@ -27,8 +27,8 @@
     
         <div class = "row mb-5">
             <div class = "col">
-                <a style = "font-size: large; font-weight: bold" href = "articleTemplate.html" class="list-group-item list-group-item-action">Title line </a>
-                <p>summary</p>
+                <a style = "font-size: large; font-weight: bold" href = "business-article1.html" class="list-group-item list-group-item-action">Flagstaff Tech Startups Gain Momentum in Northern Arizona </a>
+                <p>Flagstaff’s tech startup scene is growing rapidly, with local entrepreneurs developing innovative software, renewable energy solutions, and e-commerce platforms. Support from city programs and business incubators is helping these companies create jobs, attract talent, and diversify the regional economy.</p>
             </div>
             <div class = "col">
                 <img src="/Resources/Business/business.webp" class="card-img-top" alt="Featured News">
@@ -43,35 +43,35 @@
 
         <div class = "row mb-2">
             <div class = "col">
-                <a style = "font-size: large; font-weight: bold" href = "articleTemplate.html" class="list-group-item list-group-item-action">Title line </a>
-                <p>Date</p>
+                <a style = "font-size: large; font-weight: bold" href = "business-article2.html" class="list-group-item list-group-item-action">Downtown Flagstaff Sees Revival with New Businesses </a>
+                <p>Published: April 6, 2022</p>
             </div>
             <div class = "col">
-                <img src="" class="card-img-top" alt="Featured News">
+                <img src="/Resources/Business/newBusiness.jpg" class="card-img-top" alt="Featured News">
             </div>
             <div class = "col">
-                <a style = "font-size: large; font-weight: bold" href = "articleTemplate.html" class="list-group-item list-group-item-action">Title line </a>
-                <p>Date</p>
+                <a style = "font-size: large; font-weight: bold" href = "business-article3.html" class="list-group-item list-group-item-action">Sustainable Businesses Thrive in Flagstaff’s Green Economy</a>
+                <p>Published: September 19, 2023</p>
             </div>
             <div class = "col">
-                <img src="" class="card-img-top" alt="Featured News">
+                <img src="/Resources/Business/economy.jpg" class="card-img-top" alt="Featured News">
             </div>
         </div>
 
         <div class = "row mb-5">
             <div class = "col">
-                <a style = "font-size: large; font-weight: bold" href = "articleTemplate.html" class="list-group-item list-group-item-action">Title line </a>
-                <p>Date</p>
+                <a style = "font-size: large; font-weight: bold" href = "business-article4.html" class="list-group-item list-group-item-action"> Flagstaff Tourism Industry Boosts Local Economy</a>
+                <p>Published: January 14, 2024</p>
             </div>
             <div class = "col">
-                <img src="" class="card-img-top" alt="Featured News">
+                <img src="/Resources/Business/tourism.png" class="card-img-top" alt="Featured News">
             </div>
             <div class = "col">
-                <a style = "font-size: large; font-weight: bold" href = "articleTemplate.html" class="list-group-item list-group-item-action">Title line </a>
-                <p>Date</p>
+                <a style = "font-size: large; font-weight: bold" href = "business-article5.html" class="list-group-item list-group-item-action"> Flagstaff’s Craft Beverage Industry Expands </a>
+                <p>Published: August 2, 2025</p>
             </div>
             <div class = "col">
-                <img src="" class="card-img-top" alt="Featured News">
+                <img src="/Resources/Business/beer.jpg" class="card-img-top" alt="Featured News">
             </div>
         </div>
 
@@ -80,10 +80,10 @@
         <div class="col-lg-4">
             <h4>Latest News</h4>
             <div class="list-group">
-                <a href="articleTemplate.html" class="list-group-item list-group-item-action">News Article 1</a>
-                <a href="articleTemplate.html" class="list-group-item list-group-item-action">News Article 2</a>
-                <a href="articleTemplate.html" class="list-group-item list-group-item-action">News Article 3</a>
-                <a href="articleTemplate.html" class="list-group-item list-group-item-action">News Article 4</a>
+                <a href="business-article6.html" class="list-group-item list-group-item-action">Flagstaff Retailers Adapt to Changing Consumer Trends</a>
+                <a href="business-article7.html" class="list-group-item list-group-item-action">Flagstaff Manufacturing Sees Steady Growth</a>
+                <a href="business-article8.html" class="list-group-item list-group-item-action">Flagstaff Real Estate Market Remains Strong</a>
+                <a href="business-article9.html" class="list-group-item list-group-item-action">Flagstaff Entrepreneurs Benefit from Local Business Support Networks</a>
             </div>
         </div>
     
