--- a/Site/culture.html
+++ b/Site/culture.html
@@ -27,11 +27,11 @@
     
         <div class = "row mb-2">
             <div class = "col">
-                <a style = "font-size: large; font-weight: bold" href = "articleTemplate.html" class="list-group-item list-group-item-action">Title line </a>
-                <p>summary</p>
+                <a style = "font-size: large; font-weight: bold" href = "culture-article1.html" class="list-group-item list-group-item-action"> Flagstaff Celebrates Annual Lowell Observatory Star Party </a>
+                <p>Flagstaff’s annual Lowell Observatory Star Party brought together astronomy enthusiasts of all ages to explore the night sky and learn about space science. The event combines education, community engagement, and Flagstaff’s unique dark-sky advantage, inspiring curiosity and wonder in attendees.</p>
             </div>
             <div class = "col">
-                <img src="/Resources/Culture/music.webp" class="card-img-top" alt="Featured News">
+                <img src="/Resources/Culture/observatory.jpg" class="card-img-top" alt="Featured News">
             </div>
         </div>
         
@@ -43,35 +43,35 @@
 
         <div class = "row mb-5">
             <div class = "col">
-                <a style = "font-size: large; font-weight: bold" href = "articleTemplate.html" class="list-group-item list-group-item-action">Title line </a>
-                <p>Date</p>
+                <a style = "font-size: large; font-weight: bold" href = "culture-article2.html" class="list-group-item list-group-item-action">Flagstaff Arts Festival Brings Local Talent to the Streets</a>
+                <p>Published: March 15, 2022</p>
             </div>
             <div class = "col">
-                <img src="" class="card-img-top" alt="Featured News">
+                <img src="/Resources/Culture/festival.jpg" class="card-img-top" alt="Featured News">
             </div>
             <div class = "col">
-                <a style = "font-size: large; font-weight: bold" href = "articleTemplate.html" class="list-group-item list-group-item-action">Title line </a>
-                <p>Date</p>
+                <a style = "font-size: large; font-weight: bold" href = "culture-article3.html" class="list-group-item list-group-item-action">Flagstaff Museum Hosts Indigenous Art Exhibit</a>
+                <p>Published: July 8, 2023</p>
             </div>
             <div class = "col">
-                <img src="" class="card-img-top" alt="Featured News">
+                <img src="/Resources/Culture/musuem.jpg" class="card-img-top" alt="Featured News">
             </div>
         </div>
 
         <div class = "row mb-5">
             <div class = "col">
-                <a style = "font-size: large; font-weight: bold" href = "articleTemplate.html" class="list-group-item list-group-item-action">Title line </a>
-                <p>Date</p>
+                <a style = "font-size: large; font-weight: bold" href = "culture-article4.html" class="list-group-item list-group-item-action">Flagstaff Hosts Annual Film Festival </a>
+                <p>Published: November 21, 2023</p>
             </div>
             <div class = "col">
-                <img src="" class="card-img-top" alt="Featured News">
+                <img src="/Resources/Culture/film.png" class="card-img-top" alt="Featured News">
             </div>
             <div class = "col">
-                <a style = "font-size: large; font-weight: bold" href = "articleTemplate.html" class="list-group-item list-group-item-action">Title line </a>
-                <p>Date</p>
+                <a style = "font-size: large; font-weight: bold" href = "culture-article5.html" class="list-group-item list-group-item-action">Flagstaff Celebrates Indigenous Peoples Day with Cultural Events </a>
+                <p>Published: May 12, 2024</p>
             </div>
             <div class = "col">
-                <img src="" class="card-img-top" alt="Featured News">
+                <img src="/Resources/Culture/indigenous-1.jpg" class="card-img-top" alt="Featured News">
             </div>
         </div>
 
@@ -80,10 +80,10 @@
         <div class="col-lg-4">
             <h4>Latest News</h4>
             <div class="list-group">
-                <a href="articleTemplate.html" class="list-group-item list-group-item-action">News Article 1</a>
-                <a href="articleTemplate.html" class="list-group-item list-group-item-action">News Article 2</a>
-                <a href="articleTemplate.html" class="list-group-item list-group-item-action">News Article 3</a>
-                <a href="articleTemplate.html" class="list-group-item list-group-item-action">News Article 4</a>
+                <a href="culture-article6.html" class="list-group-item list-group-item-action">Flagstaff Hosts Annual Craft Fair</a>
+                <a href="culture-article7.html" class="list-group-item list-group-item-action">Flagstaff Celebrates Día de los Muertos</a>
+                <a href="culture-article8.html" class="list-group-item list-group-item-action">Flagstaff Theater Company Premieres New Local Play</a>
+                <a href="culture-article9.html" class="list-group-item list-group-item-action">Flagstaff Hosts Annual Music in the Park Series</a>
             </div>
         </div>
         <div id="modal-container"></div>
