--- a/Site/heading.html
+++ b/Site/heading.html
@@ -38,4 +38,4 @@
         </div>
     </div>
     </nav>
-    <marquee class="news-scroll" behavior="scroll" direction="left" onmouseover="this.stop();" onmouseout="this.start();"> <a href="#">Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. </a> <span class="dot"></span> <a href="#">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut </a> <span class="dot"></span> <a href="#">Duis aute irure dolor in reprehenderit in voluptate velit esse </a></marquee>
+    <marquee class="news-scroll" behavior="scroll" direction="left" onmouseover="this.stop();" onmouseout="this.start();"> <a href="sports-article1.html">Friday Night Lights Shine Bright in Flagstaff </a> <span class="dot"></span> <a href="business-article1.html">Local Entrepreneurs Drive Innovation in Flagstaff’s Growing Tech Scene </a> <span class="dot"></span>  <a href="health">Residents Embrace New Initiatives for Healthy Living </a></marquee>
