--- a/Site/health.html
+++ b/Site/health.html
@@ -27,11 +27,11 @@
         
         <div class = "row mb-5">
             <div class = "col">
-                <a style = "font-size: large; font-weight: bold" href = "articleTemplate.html" class="list-group-item list-group-item-action">Title line </a>
-                <p>summary</p>
+                <a style = "font-size: large; font-weight: bold" href = "health-article1.html" class="list-group-item list-group-item-action">Flagstaff Launches Community Wellness Program </a>
+                <p>Flagstaff’s new community wellness program encourages residents to adopt healthier lifestyles through fitness classes, nutrition workshops, and mental health resources. The initiative fosters social support and long-term well-being, helping the city promote a healthier, more active population.</p>
             </div>
             <div class = "col">
-                <img src="/Resources/Health/vaccine.jpg" class="card-img-top" alt="Featured News">
+                <img src="/Resources/Health/wellness.png" class="card-img-top" alt="Featured News">
             </div>
         </div>
         
@@ -43,35 +43,35 @@
 
         <div class = "row mb-5">
             <div class = "col">
-                <a style = "font-size: large; font-weight: bold" href = "articleTemplate.html" class="list-group-item list-group-item-action">Title line </a>
-                <p>Date</p>
+                <a style = "font-size: large; font-weight: bold" href = "health-article2.html" class="list-group-item list-group-item-action">Flagstaff Hospitals Improve Mental Health Services </a>
+                <p>Published: February 10, 2022</p>
             </div>
             <div class = "col">
-                <img src="" class="card-img-top" alt="Featured News">
+                <img src="/Resources/Health/hospital.jpg" class="card-img-top" alt="Featured News">
             </div>
             <div class = "col">
-                <a style = "font-size: large; font-weight: bold" href = "articleTemplate.html" class="list-group-item list-group-item-action">Title line </a>
-                <p>Date</p>
+                <a style = "font-size: large; font-weight: bold" href = "health-article3.html" class="list-group-item list-group-item-action">Local Clinics Promote Preventive Care </a>
+                <p>Published: June 5, 2023</p>
             </div>
             <div class = "col">
-                <img src="" class="card-img-top" alt="Featured News">
+                <img src="/Resources/Health/vaccine.jpg" class="card-img-top" alt="Featured News">
             </div>
         </div>
 
         <div class = "row mb-5">
             <div class = "col">
-                <a style = "font-size: large; font-weight: bold" href = "articleTemplate.html" class="list-group-item list-group-item-action">Title line </a>
-                <p>Date</p>
+                <a style = "font-size: large; font-weight: bold" href = "health-article4.html" class="list-group-item list-group-item-action">Flagstaff Introduces New Fitness Trails </a>
+                <p>Published: September 18, 2023</p>
             </div>
             <div class = "col">
-                <img src="" class="card-img-top" alt="Featured News">
+                <img src="/Resources/Health/trails.jpg" class="card-img-top" alt="Featured News">
             </div>
             <div class = "col">
-                <a style = "font-size: large; font-weight: bold" href = "articleTemplate.html" class="list-group-item list-group-item-action">Title line </a>
-                <p>Date</p>
+                <a style = "font-size: large; font-weight: bold" href = "health-article5.html" class="list-group-item list-group-item-action">Flagstaff Nutrition Workshops Promote Healthy Eating </a>
+                <p>Published: December 1, 2024</p>
             </div>
             <div class = "col">
-                <img src="" class="card-img-top" alt="Featured News">
+                <img src="/Resources/Health/nutrition.jpg" class="card-img-top" alt="Featured News">
             </div>
         </div>
 
@@ -80,10 +80,10 @@
         <div class="col-lg-4">
             <h4>Latest News</h4>
             <div class="list-group">
-                <a href="articleTemplate.html" class="list-group-item list-group-item-action">News Article 1</a>
-                <a href="articleTemplate.html" class="list-group-item list-group-item-action">News Article 2</a>
-                <a href="articleTemplate.html" class="list-group-item list-group-item-action">News Article 3</a>
-                <a href="articleTemplate.html" class="list-group-item list-group-item-action">News Article 4</a>
+                <a href="health-article6.html" class="list-group-item list-group-item-action">Flagstaff Expands Access to Telehealth Services</a>
+                <a href="health-article7.html" class="list-group-item list-group-item-action">Flagstaff Hosts Annual Health and Wellness Fair</a>
+                <a href="health-article8.html" class="list-group-item list-group-item-action">Flagstaff Schools Implement Health Education Programs</a>
+                <a href="health-article9.html" class="list-group-item list-group-item-action">Flagstaff Senior Centers Focus on Active Aging</a>
             </div>
         </div>
         <div id="modal-container"></div>
