--- a/Site/landing.html
+++ b/Site/landing.html
@@ -59,11 +59,11 @@
 
             <div class="col-lg-8">
                 <div class="card mb-4">
-                    <img src="https://via.placeholder.com/800x400" class="card-img-top" alt="Featured News">
+                    <img src="/Resources/Health/hospital-2.jpg" style = "max-height: 300px;" class="card-img-top" alt="Featured News">
                     <div class="card-body">
-                        <h2 class="card-title">Featured News Headline</h2>
-                        <p class="card-text">Summary of news article</p>
-                        <a href="articleTemplate.html" class="btn btn-primary">Read More</a>
+                        <h2 class="card-title">Flagstaff Hospitals Improve Mental Health Services</h2>
+                        <p class="card-text">Flagstaff hospitals have expanded mental health services, offering counseling, therapy programs, and support groups to better serve the community. The initiative aims to increase access to care, reduce stigma, and provide early intervention for individuals facing mental health challenges.</p>
+                        <a href="health-article2.html" class="btn btn-primary">Read More</a>
                     </div>
                 </div>
             </div>
@@ -72,10 +72,10 @@
             <div class="col-lg-4">
                 <h4>Latest News</h4>
                 <div class="list-group">
-                    <a href="articleTemplate.html" class="list-group-item list-group-item-action">News Article 1</a>
-                    <a href="articleTemplate.html" class="list-group-item list-group-item-action">News Article 2</a>
-                    <a href="articleTemplate.html" class="list-group-item list-group-item-action">News Article 3</a>
-                    <a href="articleTemplate.html" class="list-group-item list-group-item-action">News Article 4</a>
+                    <a href="sports-article2.html" class="list-group-item list-group-item-action">Rivalry Returns as Flagstaff High and Coconino Clash Under the Lights</a>
+                    <a href="business-article2.html" class="list-group-item list-group-item-action">Small Businesses Bring Energy Back to Historic Downtown</a>
+                    <a href="health-article3.html" class="list-group-item list-group-item-action">Flagstaff Residents Encouraged to Prioritize Routine Health Checks</a>
+                    <a href="culture-article2.html" class="list-group-item list-group-item-action">Community Enjoys Visual Arts, Music, and Performances</a>
                 </div>
             </div>
         </div>
