--- a/Site/sports.html
+++ b/Site/sports.html
@@ -26,8 +26,8 @@
         
         <div class = "row mb-5">
             <div class = "col">
-                <a style = "font-size: large; font-weight: bold" href = "articleTemplate.html" class="list-group-item list-group-item-action">Title line </a>
-                <p>summary</p>
+                <a style = "font-size: large; font-weight: bold" href = "sports-article1.html" class="list-group-item list-group-item-action">Community Spirit Fuels Football’s Popularity in Northern Arizona </a>
+                <p>Football in Flagstaff, Arizona thrives through enthusiastic support for Northern Arizona University and spirited high school rivalries that bring the community together each fall. From packed stadiums to growing youth leagues, the town’s strong sports culture keeps the game a vibrant part of local life.</p>
             </div>
             <div class = "col">
                 <img src="/Resources/Sports/football.webp" class="card-img-top" alt="Featured News">
@@ -43,35 +43,35 @@
         <div class = "row mb-5">
 
             <div class = "col">
-                <a style = "font-size: large; font-weight: bold" href = "articleTemplate.html" class="list-group-item list-group-item-action">Title line </a>
-                <p>Date</p>
+                <a style = "font-size: large; font-weight: bold" href = "sports-article2.html" class="list-group-item list-group-item-action">Rivalry on the Peaks: Flagstaff High vs. Coconino Heats Up Again </a>
+                <p>Published: September 8, 2023</p>
             </div>
             <div class = "col">
-                <img src="" class="card-img-top" alt="Featured News">
+                <img src="/Resources/Sports/highschool-footaball.jpg" class="card-img-top" alt="Featured News">
             </div>
             <div class = "col">
-                <a style = "font-size: large; font-weight: bold" href = "articleTemplate.html" class="list-group-item list-group-item-action">Title line </a>
-                <p>Date</p>
+                <a style = "font-size: large; font-weight: bold" href = "sports-article3.html" class="list-group-item list-group-item-action">Lumberjacks Showcase Strength in Skydome Season Opener</a>
+                <p>Published: August 18, 2024</p>
             </div>
             <div class = "col">
-                <img src="" class="card-img-top" alt="Featured News">
+                <img src="/Resources/Sports/skydome.jpg" class="card-img-top" alt="Featured News">
             </div>
         </div>
 
         <div class = "row mb-5">
             <div class = "col">
-                <a style = "font-size: large; font-weight: bold" href = "articleTemplate.html" class="list-group-item list-group-item-action">Title line </a>
-                <p>Date</p>
+                <a style = "font-size: large; font-weight: bold" href = "sports-article4.html" class="list-group-item list-group-item-action">Youth Football Programs Thrive in Northern Arizona’s Mountain Air</a>
+                <p>Published: July 9, 2024</p>
             </div>
             <div class = "col">
-                <img src="" class="card-img-top" alt="Featured News">
+                <img src="/Resources/Sports/youth-football.jpg" class="card-img-top" alt="Featured News">
             </div>
             <div class = "col">
-                <a style = "font-size: large; font-weight: bold" href = "articleTemplate.html" class="list-group-item list-group-item-action">Title line </a>
-                <p>Date</p>
+                <a style = "font-size: large; font-weight: bold" href = "sports-article5.html" class="list-group-item list-group-item-action">Flagstaff Fans Bring Big Energy to Small-Town Stadiums</a>
+                <p>Published: October 5, 2024</p>
             </div>
             <div class = "col">
-                <img src="" class="card-img-top" alt="Featured News">
+                <img src="/Resources/Sports/stadium.webp" class="card-img-top" alt="Featured News">
             </div>
         </div>
 
@@ -80,10 +80,10 @@
         <div class="col-lg-4">
             <h4>Latest News</h4>
             <div class="list-group">
-                <a href="articleTemplate.html" class="list-group-item list-group-item-action">News Article 1</a>
-                <a href="articleTemplate.html" class="list-group-item list-group-item-action">News Article 2</a>
-                <a href="articleTemplate.html" class="list-group-item list-group-item-action">News Article 3</a>
-                <a href="articleTemplate.html" class="list-group-item list-group-item-action">News Article 4</a>
+                <a href="sports-article6.html" class="list-group-item list-group-item-action">NAU’s Defense Dominates in Early-Season Statement Win</a>
+                <a href="sports-article7.html" class="list-group-item list-group-item-action">Mountain Town Marathon Draws Record Number of Local Runners</a>
+                <a href="sports-article8.html" class="list-group-item list-group-item-action">Flagstaff Soccer Clubs Unite for Annual High-Altitude Showcase</a>
+                <a href="sports-article9.html" class="list-group-item list-group-item-action">Runners and Cyclists Celebrate Trails at Buffalo Park Sports Festival</a>
             </div>
         </div>
 
