--- a/Site/health-article5.html
+++ b/Site/health-article5.html
@@ -31,7 +31,7 @@
         </div>
         <div id = "imageCaption">
             <h6>
-                image caption:
+                Nutrition image
             </h6>
         </div>
         <div class = "row">
