--- a/Site/health-article9.html
+++ b/Site/health-article9.html
@@ -31,7 +31,7 @@
         </div>
         <div id = "imageCaption">
             <h6>
-                Programs Encourage Fitness and Social Engagement for Older Adults
+               Harold image
             </h6>
         </div>
         <div class = "row">
