--- a/Site/landing.html
+++ b/Site/landing.html
@@ -23,21 +23,21 @@
         </div>
         <div class="carousel-inner">
             <div class="carousel-item active">
-            <img src="/Resources/Halloween/halloween-harvest-photos-11.webp" class="d-block w-100" alt="halloween costume contest in downtown flagstaff">
+            <img src="./Resources/Halloween/halloween-harvest-photos-11.webp" class="d-block w-100" alt="halloween costume contest in downtown flagstaff">
             <div class="carousel-caption d-none d-md-block">
                 <h5>Halloween in Downtown Flagstaff</h5>
                 <p>Spooky season is upon us! Read here for more about upcoming events.</p>
             </div>
             </div>
             <div class="carousel-item">
-            <img src="/Resources/mountains.webp" class="d-block w-100" alt="flagstaff's mountain region">
+            <img src="./Resources/mountains.webp" class="d-block w-100" alt="flagstaff's mountain region">
             <div class="carousel-caption d-none d-md-block">
                 <h5>Get outside this weekend</h5>
                 <p>Read more here to find out how you can explore Flagstaff.</p>
             </div>
             </div>
             <div class="carousel-item">
-            <img src="/Resources/downtown_flagstaff.jpg" class="d-block w-100" alt="civics square in downtown flagstaff">
+            <img src="./Resources/downtown_flagstaff.jpg" class="d-block w-100" alt="civics square in downtown flagstaff">
             <div class="carousel-caption d-none d-md-block">
                 <h5>Explore downtown Flagstaff</h5>
                 <p>Events for the whole family! See what's going on in your community.</p>
@@ -59,7 +59,7 @@
 
             <div class="col-lg-8">
                 <div class="card mb-4">
-                    <img src="/Resources/Health/hospital-2.jpg" style = "max-height: 300px;" class="card-img-top" alt="Featured News">
+                    <img src="./Resources/Health/hospital-2.jpg" style = "max-height: 300px;" class="card-img-top" alt="Featured News">
                     <div class="card-body">
                         <h2 class="card-title">Flagstaff Hospitals Improve Mental Health Services</h2>
                         <p class="card-text">Flagstaff hospitals have expanded mental health services, offering counseling, therapy programs, and support groups to better serve the community. The initiative aims to increase access to care, reduce stigma, and provide early intervention for individuals facing mental health challenges.</p>
